tests/002.out
Fatal error: Uncaught Error: Call to undefined function sample_test1() in /home/freeze/eclipse-workspace/php-7.3.8/ext/sample/tests/002.php:2
Stack trace:
#0 {main}
  thrown in /home/freeze/eclipse-workspace/php-7.3.8/ext/sample/tests/002.php on line 2