tests/002.php
<?php
$ret = sample_test1();

var_dump($ret);
?>
